--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,7 @@ cache:
 osx_image: xcode6.4 
 xcode_project: FastlaneDeployTest.xcodeproj 
 xcode_scheme: FastlaneDeployTest
-xcode_sdk: iphonesimulator8.4 
+xcode_sdk: iphonesimulator8.4
+
+script:
+ fastlane test 
